[project]
name = "RvcPyInfer"
description = "Rvc 的 ONNX 模型导出格式推理实现"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3",
    "pyworld>=0.3.5",
    "samplerate>=0.2.4",
    "soundfile>=0.14.0",
]
authors = [
    { name = "观赏鱼" }
]

dynamic = ["version"]

# 读取版本号
[tool.hatch.version]
path = "src/RvcPyInfer/_version.py"

[project.scripts]
rvc-infer = "RvcPyInfer.__main__:infer_main"
rvc-model = "RvcPyInfer.__main__:export_main"

# 构建系统
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 可选模块，方便调用
[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.27.0",
]
dml = [
    "onnxruntime-directml>=1.24.4",
]
cuda = [
    "onnxruntime-gpu>=1.27.0",
]
openvino = [
    "openvino>=2026.2.1",
]
index = [
    "faiss-cpu>=1.14.3",
]

[tool.uv]
conflicts = [   # 这几个是互斥的，防止 uv 傻乎乎地全装上了
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "dml" }
    ],
]
