[project]
name = "RvcPyInfer"
description = "Rvc 的 ONNX 模型导出格式推理实现"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3",
    "pyworld>=0.3.5",
    "samplerate>=0.2.4",
    "soundfile>=0.14.0",
]
authors = [
    { name = "观赏鱼" }
]

dynamic = ["version"]

# 读取版本号
[tool.hatch.version]
path = "src/RvcPyInfer/_version.py"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "rvc", 
    "onnx", 
    "voice-conversion",
]

[project.urls]
Homepage = "https://github.com/TwoCreepers/RvcPyInfer"
Repository = "https://github.com/TwoCreepers/RvcPyInfer"

[project.scripts]
rvc-infer = "RvcPyInfer.onnx.export.cli:main"
rvc-model = "RvcPyInfer.__main__:export_main"

# 构建系统
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 可选模块，方便调用
[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.27.0",
]
dml = [
    "onnxruntime-directml>=1.24.4",
]
cuda = [
    "onnxruntime-gpu>=1.27.0",
]
openvino = [
    "openvino>=2026.2.1",
]
index = [
    "faiss-cpu>=1.14.3",
]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.21",
]

[tool.uv]
conflicts = [   # 这几个是互斥的，防止 uv 傻乎乎地全装上了
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "dml" }
    ],
]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "**/.*", "src/RvcPyInfer/resource/**/.*"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnusedImport = "warning"
reportMissingImports = "error"

[tool.ruff]
line-length = 180
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "src/RvcPyInfer/resource/"
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",  # pycodestyle 错误
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

ignore = [
    
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"